--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_email"
+        android:drawableStart="@drawable/custom_email_icon"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:drawablePadding="12dp"
@@ -49,7 +49,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:drawableLeft="@drawable/ic_email" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -61,7 +62,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_lock"
+        android:drawableStart="@drawable/custom_lock_icon"
         android:drawablePadding="12dp"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
@@ -71,7 +72,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        android:drawableLeft="@drawable/ic_lock" />
 
     <Button
         android:id="@+id/button"
