--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,6 +8,18 @@
     tools:ignore="UseSwitchCompatOrMaterialXml"
     android:background="@color/gray">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="348dp"
+        android:layout_height="288dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/appetlogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="match_parent"
@@ -79,7 +91,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="240dp"
         android:hint="@string/app_name"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,21 +104,20 @@
         android:layout_height="60dp"
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="196dp"
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:background="@drawable/custom_input"
         android:drawableLeft="@drawable/custom_email_icon"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
         android:drawablePadding="12dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:text="@string/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        tools:layout_editor_absoluteY="340dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -119,7 +130,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="216dp" />
+        tools:layout_editor_absoluteY="290dp" />
 
     <Switch
         android:id="@+id/switch1"
@@ -130,6 +141,6 @@
         app:layout_constraintHorizontal_bias="0.315"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="604dp" />
+        tools:layout_editor_absoluteY="673dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
