--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="10dp"/>
-            <stroke android:color="@color/black" android:width="2dp"/>
+            <stroke android:color="@color/light_gray" android:width="2dp"/>
         </shape>
     </item>
 
